baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__02_parser__simple_strings.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Messages"
    L_BRACE "{"
    FIELD
      WORD "greeting"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "hello"
            QUOTE """
            WORD "hello"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "empty"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL ""
            QUOTE """
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "with_spaces"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "hello world"
            QUOTE """
            WORD "hello"
            WORD "world"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "with_escapes"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "line1\nline2\ttab"
            QUOTE """
            WORD "line1"
            ERROR_TOKEN "\"
            WORD "nline2"
            ERROR_TOKEN "\"
            WORD "ttab"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "with_quotes"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "She said \"
            QUOTE """
            WORD "She"
            WORD "said"
            ERROR_TOKEN "\"
            QUOTE """
    FIELD "hello"
      WORD "hello"
    ERROR_TOKEN "\"
    QUOTE """
    QUOTE """
    R_PAREN ")"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "GetRole"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      STRING_LITERAL "admin"
        QUOTE """
        WORD "admin"
        QUOTE """
      PIPE "|"
      STRING_LITERAL "user"
        QUOTE """
        WORD "user"
        QUOTE """
      PIPE "|"
      STRING_LITERAL "guest"
        QUOTE """
        WORD "guest"
        QUOTE """
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL "user"
            QUOTE """
            WORD "user"
            QUOTE """
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
Error: Expected ')', found identifier
   ╭─[ simple_strings.baml:7:41 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                         ──┬──  
   │                                           ╰──── Expected ')', found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: field 'hello' is missing a type annotation
   ╭─[ simple_strings.baml:7:41 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                         ──┬──  
   │                                           ╰──── field 'hello' is missing a type annotation
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found error
   ╭─[ simple_strings.baml:7:46 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                              ┬  
   │                                              ╰── Expected Unexpected token in class body, found error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ simple_strings.baml:7:47 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                               ┬  
   │                                               ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found '"'
   ╭─[ simple_strings.baml:7:48 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                                ┬  
   │                                                ╰── Expected Unexpected token in class body, found '"'
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found ')'
   ╭─[ simple_strings.baml:7:49 ]
   │
 7 │   with_quotes string @alias("She said \"hello\"")
   │                                                 ┬  
   │                                                 ╰── Expected Unexpected token in class body, found ')'
   │ 
   │ Note: Error code: E0010
───╯
